fixed messageActions alignment

--- a/frontend/ui/src/pages/Inbox/MessageInput/index.module.scss
+++ b/frontend/ui/src/pages/Inbox/MessageInput/index.module.scss
@@ -141,7 +141,9 @@
 .messageActionsContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
+  height: 100%;
+  margin-bottom: 10px;
   padding-right: 6px;
 }
 
